hdfs setting for better performance